--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,11 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.wizard {
+  max-width: 600px;
+  display: flex;
+  flex-flow: row wrap;
+  margin: 0 auto;
 }
